# remindme-homeassistant-addons

./: .gitignore  repository.yaml
cultivation-assistant/app/: package.json  pnpm-lock.yaml  pyproject.toml
cultivation-assistant/app/backend/: alembic.ini  pyrightconfig.json
cultivation-assistant/app/backend/alembic/: env.py
cultivation-assistant/app/backend/alembic/versions/: 0001_foundation.py  0002_grow_spaces.py  0003_grow_space_dimensions.py
cultivation-assistant/app/backend/cultivation_assistant/: __init__.py  config.py  logging.py  main.py  middleware.py  runtime.py
cultivation-assistant/app/backend/cultivation_assistant/api/: errors.py
cultivation-assistant/app/backend/cultivation_assistant/db/: engine.py  models.py
cultivation-assistant/app/backend/cultivation_assistant/grow_spaces/: __init__.py  dimensions.py  discovery.py  repository.py  roles.py  router.py  schemas.py  service.py  units.py
cultivation-assistant/app/backend/cultivation_assistant/home_assistant/: __init__.py  client.py  state_cache.py  subscription.py
cultivation-assistant/app/frontend/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
cultivation-assistant/app/frontend/src/: main.tsx  styles.css
cultivation-assistant/app/frontend/src/api/: growSpaces.test.ts  growSpaces.ts  system.test.ts  system.ts
cultivation-assistant/app/frontend/src/app/: App.tsx  ThemeProvider.test.tsx  ThemeProvider.tsx  theme-context.ts
cultivation-assistant/app/frontend/src/routes/: ComingSoonPage.tsx  GrowSpaceDetailPage.test.tsx  GrowSpaceDetailPage.tsx  (+5 more)
(+223 files in other folders)
