[project]
name = "cultivation-assistant"
version = "0.1.0"
description = "Local-first cultivation planning and monitoring for Home Assistant"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.21,<1",
  "alembic>=1.16,<2",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0.41,<3",
  "structlog>=25.4,<26",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "aiohttp>=3.14.2",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
  "voluptuous>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/cultivation_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "custom_components/tests"]
pythonpath = ["backend", "."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["cultivation_assistant"]
mypy_path = "backend"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
